# petsc_project

./: CMakeLists.txt  README.md  run_benchmarks.sh
benchmark_scripts/: cores_script.sh  data_script.sh
dependencies/: build-all.sh  build-gcc.sh  build-petsc.sh  build-python.sh  config.sh
docker/: Dockerfile  Dockerfile_base  Dockerfile_debug
docker/base/: Dockerfile
docker/debug/: Dockerfile
docker/release/: Dockerfile
scripts/: cores_script.sh  data_script.sh
src/: Makefile  hello_p.c  parallel_sle_solver.c  petsc_blas.c  petsc_cholesky.c  sle_solver.c  test.c  try.c
src/data/test/: test_input_1.txt  test_input_2.txt  test_input_3.txt  test_input_4.txt  test_output_1.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt
src/data/training/: training_input.txt  training_output.txt
src/data/validation/: validation_input.txt  validation_output.txt
